@@ -18,38 +18,52 @@
  */
 package org.neodymium.ai.executor.selenide;
 
+import com.codeborne.selenide.Condition;
 import com.codeborne.selenide.Configuration;
 import com.codeborne.selenide.ElementsCollection;
 import com.codeborne.selenide.Selenide;
 import com.codeborne.selenide.SelenideElement;
 import com.codeborne.selenide.WebDriverRunner;
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import org.neodymium.ai.util.SelectorSyntaxChecker;
+import org.neodymium.ai.action.Action;
+import org.neodymium.ai.action.LocatorCandidate;
+import org.neodymium.ai.model.ContextLevel;
+import org.neodymium.ai.model.DomFeatureVector;
+import org.neodymium.ai.model.LocatorCascadeResolver;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Shared utility for finding {@link SelenideElement} instances using a multi-tiered sequence of resolution strategies.
  * <p>
- * Evaluates target strings using the following prioritized strategy order:
+ * Evaluates target strings and candidate fallbacks using syntactic pre-classification and the following prioritized strategy order:
  * </p>
  * <ol>
  *   <li><b>Neodymium Automation ID (data-ai / xc_...):</b> Direct lookup, followed by dynamic DOM attribute stamping via {@link PageAnalyzer} if absent (essential for offline replay healing).</li>
- *   <li><b>CSS Selector with Smart Button Healing:</b> Standard CSS resolution, falling back to parent-candidate searching if button elements have shifted tag names (e.g., div/span button replacements).</li>
+ *   <li><b>Playwright Pseudo-Selector Translation:</b> Direct translation of {@code text=...}, {@code :has-text(...)}) into XPath.</li>
+ *   <li><b>CSS Selector:</b> Standard CSS resolution via {@link LocatorResolver}.</li>
  *   <li><b>XPath Expression:</b> Direct evaluation for explicitly forced or path-structured locators.</li>
  *   <li><b>Link Text Matching:</b> Exact match via {@link By#linkText(String)}.</li>
- *   <li><b>Text Content &amp; ARIA Searching:</b> XPath text normalization and ARIA attribute substring matching.</li>
+ *   <li><b>Text Content &amp; ARIA Searching:</b> XPath text normalization and ARIA attribute substring matching for plain text queries.</li>
  * </ol>
  *
- * @author AI-generated: Gemini 2.5 Pro
+ * @author AI-generated: Gemini 3.7 Flash
  * @author Xceptance GmbH 2026
  */
 public final class SelenideElementFinder
 {
+    private static final Logger LOG = LoggerFactory.getLogger(SelenideElementFinder.class);
     private static final Map<String, Long> LAST_STAMP_TIMESTAMP_PER_URL = new ConcurrentHashMap<>();
     private static final long STAMP_THROTTLE_MS = 2000L;
+    private static final long RETRY_INTERVAL_MS = 100L;
 
     /**
      * Private constructor to prevent instantiation of this static utility class.
@@ -102,27 +116,116 @@ public final class SelenideElementFinder
      */
     public static SelenideElement findElement(final String target)
     {
-        if (target == null || target.trim().isEmpty())
+        return findElement(target, List.of());
+    }
+
+    /**
+     * Resolves and returns a {@link SelenideElement} based on an {@link Action}, trying the primary target
+     * and any alternative candidate locators attached to the action in confidence order.
+     *
+     * @param action the action containing primary target and candidate locators
+     * @return the resolved {@link SelenideElement}
+     * @throws IllegalArgumentException if {@code action} is null or has an empty target
+     */
+    public static SelenideElement findElement(final Action action)
+    {
+        if (action == null)
+        {
+            throw new IllegalArgumentException("Action cannot be null");
+        }
+        final List<String> fallbacks = new ArrayList<>();
+        if (action.getCandidateLocators() != null)
+        {
+            for (final LocatorCandidate candidate : action.getCandidateLocators())
+            {
+                if (candidate != null && candidate.getLocator() != null && !candidate.getLocator().isBlank())
+                {
+                    fallbacks.add(candidate.getLocator());
+                }
+            }
+        }
+        final DomFeatureVector vector = action.getDomFeatureVector();
+        return findElement(action.getTarget(), fallbacks, vector);
+    }
+
+    /**
+     * Resolves and returns a {@link SelenideElement} based on the given target locator and fallback candidates.
+     * Continuously attempts strategies until the configured Selenide timeout expires.
+     *
+     * @param target             the primary target locator or text content
+     * @param fallbackCandidates optional fallback candidate locators attempted in order
+     * @return the resolved {@link SelenideElement}
+     * @throws IllegalArgumentException if {@code target} is null or blank
+     */
+    public static SelenideElement findElement(final String target, final List<String> fallbackCandidates)
+    {
+        return findElement(target, fallbackCandidates, null);
+    }
+
+    /**
+     * Resolves and returns a {@link SelenideElement} based on target locator, fallback candidates,
+     * and optional DOM feature vector proximity scoring.
+     *
+     * @param target             the primary target locator or text content
+     * @param fallbackCandidates optional fallback candidate locators attempted in order
+     * @param recordedVector     optional recorded feature vector for proximity fallback
+     * @return the resolved {@link SelenideElement}
+     * @throws IllegalArgumentException if {@code target} is null or blank
+     */
+    public static SelenideElement findElement(
+        final String target,
+        final List<String> fallbackCandidates,
+        final DomFeatureVector recordedVector)
+    {
+        if (target == null || target.isBlank())
         {
             throw new IllegalArgumentException("Target cannot be empty");
         }
 
+        final List<String> allCandidates = new ArrayList<>();
+        final Set<String> candidateSet = new LinkedHashSet<>();
+        candidateSet.add(target);
+        if (fallbackCandidates != null)
+        {
+            candidateSet.addAll(fallbackCandidates);
+        }
+
+        allCandidates.addAll(candidateSet);
         final long start = System.currentTimeMillis();
         final long timeoutMs = Configuration.timeout;
 
         while (true)
         {
-            final List<String> candidates = splitCandidates(target);
-            for (final String candidate : candidates)
+            for (final String candidate : allCandidates)
             {
-                final SelenideElement found = tryResolveCandidate(candidate);
+                final SelenideElement found = findDirect(candidate);
                 if (found != null)
                 {
                     return found;
                 }
             }
 
-            // Check if timeout has expired
+            // Feature proximity matching fallback when recorded vector is available
+            if (recordedVector != null)
+            {
+                try
+                {
+                    LOG.trace("   🧬 Attempting DomFeatureVector proximity match for target '{}': {}", target, recordedVector.toSummaryString());
+                    final WebElement matchedWebElement = new PageAnalyzer().findLiveElementByFeatureVector(
+                        WebDriverRunner.getWebDriver(),
+                        recordedVector,
+                        0.80);
+                    if (matchedWebElement != null)
+                    {
+                        LOG.trace("   ✅ Proximity match found live element for target '{}'", target);
+                        return Selenide.$(matchedWebElement);
+                    }
+                }
+                catch (final Exception ignored)
+                {
+                }
+            }
+
             if (System.currentTimeMillis() - start >= timeoutMs)
             {
                 break;
@@ -130,7 +233,7 @@ public final class SelenideElementFinder
 
             try
             {
-                Thread.sleep(100);
+                Thread.sleep(RETRY_INTERVAL_MS);
             }
             catch (final InterruptedException e)
             {
@@ -140,7 +243,7 @@ public final class SelenideElementFinder
         }
 
         // Final Fallback: Default Selenide behavior to throw appropriate Selenide ElementNotFound exception
-        final String firstCandidate = splitCandidates(target).get(0);
+        final String firstCandidate = allCandidates.get(0);
         if (firstCandidate.startsWith("/") || firstCandidate.startsWith("("))
         {
             return Selenide.$x(firstCandidate);
@@ -148,12 +251,9 @@ public final class SelenideElementFinder
         return Selenide.$(resolveLocator(firstCandidate));
     }
 
-    /**
-     * Attempts to resolve a single candidate locator across Neodymium ID, CSS, XPath, and text matching.
-     */
-    private static SelenideElement tryResolveCandidate(final String rawCandidate)
+    private static SelenideElement findDirect(final String rawCandidate)
     {
-        if (rawCandidate == null || rawCandidate.trim().isEmpty())
+        if (rawCandidate == null || rawCandidate.isBlank())
         {
             return null;
         }
@@ -161,139 +261,48 @@ public final class SelenideElementFinder
         String clean = rawCandidate.trim();
         boolean forceXpath = false;
         boolean forceCss = false;
+        boolean forceText = false;
 
-        if (clean.toLowerCase().startsWith("xpath="))
+        final String lower = clean.toLowerCase();
+        if (lower.startsWith("xpath="))
         {
             clean = clean.substring(6).trim();
             forceXpath = true;
         }
-        else if (clean.toLowerCase().startsWith("css="))
+        else if (lower.startsWith("css="))
         {
             clean = clean.substring(4).trim();
             forceCss = true;
         }
-
-        // -------------------------------------------------------------------------
-        // Strategy 1: Neodymium Automation ID (data-ai=...) extraction
-        // -------------------------------------------------------------------------
-        if (!forceXpath && (clean.contains("data-ai=") || clean.startsWith("[data-ai=")))
+        else if (lower.startsWith("text=") || lower.startsWith("has-text="))
         {
-            final java.util.regex.Matcher matcher = java.util.regex.Pattern.compile("(xc[a-zA-Z0-9_\\-]+)").matcher(clean);
-            if (matcher.find())
+            forceText = true;
+        }
+
+        if (!forceXpath && !forceText && (clean.contains("data-ai=") || clean.startsWith("[data-ai=") || clean.matches(".*#xc[a-zA-Z0-9_\\-]+.*")))
+        {
+            final SelenideElement el = tryResolveAutomationId(clean);
+            if (el != null)
             {
-                final String neoId = matcher.group(1);
-                try
-                {
-                    final ElementsCollection els = Selenide.$$(By.cssSelector("[data-ai='" + neoId + "']"));
-                    final SelenideElement visible = findFirstVisible(els);
-                    if (visible != null)
-                    {
-                        return visible;
-                    }
-
-                    // Dynamically stamp data-ai attributes into live DOM if absent (throttled to at most 1 stamp per 2 seconds per URL)
-                    final WebDriver driver = WebDriverRunner.getWebDriver();
-                    if (shouldAttemptDomStamp(driver))
-                    {
-                        try
-                        {
-                            new PageAnalyzer(driver).captureSimplifiedDom(ContextLevel.LEAN);
-                        }
-                        catch (final Exception ignored)
-                        {
-                        }
-                    }
-
-                    final ElementsCollection retryEls = Selenide.$$(By.cssSelector("[data-ai='" + neoId + "']"));
-                    final SelenideElement visibleRetry = findFirstVisible(retryEls);
-                    if (visibleRetry != null)
-                    {
-                        return visibleRetry;
-                    }
-                }
-                catch (final Exception ignored)
-                {
-                }
+                return el;
             }
         }
 
-        // -------------------------------------------------------------------------
-        // Strategy 2: Playwright Pseudo-Selector Translation (:has-text, :text, :contains, text=..., has-text=...)
-        // -------------------------------------------------------------------------
-        if (!forceXpath && !forceCss)
+        if (!forceXpath && !forceCss && (forceText || clean.contains(":") || clean.contains("=")))
         {
-            final String lower = clean.toLowerCase();
-            if (lower.startsWith("text=") || lower.startsWith("text*=") || lower.startsWith("text:") || lower.startsWith("text*:")
-                    || lower.startsWith("has-text=") || lower.startsWith("has-text*=") || lower.startsWith("has-text:") || lower.startsWith("has-text*:"))
+            final SelenideElement el = tryResolvePlaywrightPseudo(clean);
+            if (el != null)
             {
-                final int delimIdx = clean.indexOf(clean.contains("=") ? '=' : ':');
-                String text = clean.substring(delimIdx + 1).trim();
-                if ((text.startsWith("\"") && text.endsWith("\"")) || (text.startsWith("'") && text.endsWith("'")))
-                {
-                    if (text.length() >= 2)
-                    {
-                        text = text.substring(1, text.length() - 1);
-                    }
-                }
-                if (!text.isEmpty())
-                {
-                    try
-                    {
-                        final String escaped = escapeXpath(text);
-                        final String xpath = String.format(
-                            "//*[not(ancestor-or-self::*[@id='neo-ai-hud']) and (contains(normalize-space(text()), %s) or contains(normalize-space(.), %s) or contains(@value, %s) or contains(@aria-label, %s))]",
-                            escaped, escaped, escaped, escaped
-                        );
-                        final ElementsCollection els = Selenide.$$x(xpath);
-                        final SelenideElement visible = findFirstVisible(els);
-                        if (visible != null)
-                        {
-                            return visible;
-                        }
-                    }
-                    catch (final Exception ignored)
-                    {
-                    }
-                }
-            }
-
-            final java.util.regex.Matcher pwMatcher = java.util.regex.Pattern.compile("^(.*?):(has-text|has-text\\*|text|text\\*|contains)\\(['\"]?(.*?)['\"]?\\)$", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(clean);
-            if (pwMatcher.find())
-            {
-                String tag = pwMatcher.group(1).trim();
-                if (tag.isEmpty())
-                {
-                    tag = "*";
-                }
-                final String text = pwMatcher.group(3).trim();
-                if (!text.isEmpty())
-                {
-                    try
-                    {
-                        final String xpath = String.format("//%s[contains(normalize-space(.), %s)]", tag, escapeXpath(text));
-                        final ElementsCollection els = Selenide.$$x(xpath);
-                        final SelenideElement visible = findFirstVisible(els);
-                        if (visible != null)
-                        {
-                            return visible;
-                        }
-                    }
-                    catch (final Exception ignored)
-                    {
-                    }
-                }
+                return el;
             }
         }
 
-        // -------------------------------------------------------------------------
-        // Strategy 3: Standard CSS Selector / Playwright Pseudo / Text Selector
-        // -------------------------------------------------------------------------
-        if (!forceXpath)
+        if (!forceCss && !forceText && (forceXpath || clean.startsWith("/") || clean.startsWith("./") || clean.startsWith("(")))
         {
             try
             {
-                final ElementsCollection els = Selenide.$$(resolveLocator(clean));
-                final SelenideElement visible = findFirstVisible(els);
+                final ElementsCollection els = Selenide.$$x(clean);
+                final SelenideElement visible = findFirstVisible(els, clean);
                 if (visible != null)
                 {
                     return visible;
@@ -304,37 +313,28 @@ public final class SelenideElementFinder
             }
         }
 
-        // -------------------------------------------------------------------------
-        // Strategy 4: XPath Expression
-        // -------------------------------------------------------------------------
-        if (!forceCss)
+        if (!forceXpath && !forceText)
         {
-            if (forceXpath || clean.startsWith("/") || clean.startsWith("./") || clean.startsWith("("))
+            try
             {
-                try
+                final ElementsCollection els = Selenide.$$(LocatorResolver.resolveLocator(clean));
+                final SelenideElement visible = findFirstVisible(els, clean);
+                if (visible != null)
                 {
-                    final ElementsCollection els = Selenide.$$x(clean);
-                    final SelenideElement visible = findFirstVisible(els);
-                    if (visible != null)
-                    {
-                        return visible;
-                    }
+                    return visible;
                 }
-                catch (final Exception ignored)
-                {
-                }
+            }
+            catch (final Exception ignored)
+            {
             }
         }
 
-        // -------------------------------------------------------------------------
-        // Strategy 5: Link Text Matching
-        // -------------------------------------------------------------------------
         if (!forceCss && !forceXpath)
         {
             try
             {
                 final ElementsCollection els = Selenide.$$(By.linkText(clean));
-                final SelenideElement visible = findFirstVisible(els);
+                final SelenideElement visible = findFirstVisible(els, clean);
                 if (visible != null)
                 {
                     return visible;
@@ -345,20 +345,33 @@ public final class SelenideElementFinder
             }
         }
 
-        // -------------------------------------------------------------------------
-        // Strategy 6: Text Content Searching (ONLY for plain text queries, not structured CSS/XPath)
-        // -------------------------------------------------------------------------
-        if (!forceCss && !forceXpath && SelectorSyntaxChecker.determineType(clean) == SelectorSyntaxChecker.SelectorType.TEXT && !clean.contains("<") && !clean.contains(">"))
+        if (!forceCss && !forceXpath && !clean.contains("<") && !clean.contains(">"))
         {
             try
             {
-                final String escaped = escapeXpath(clean);
+                final String escaped = LocatorResolver.escapeXpath(clean);
                 final String xpath = String.format(
                     "//*[not(ancestor-or-self::*[@id='neo-ai-hud']) and (contains(normalize-space(text()), %s) or contains(@value, %s) or contains(@aria-label, %s))]",
                     escaped, escaped, escaped
                 );
                 final ElementsCollection els = Selenide.$$x(xpath);
-                final SelenideElement visible = findFirstVisible(els);
+                final SelenideElement visible = findFirstVisible(els, clean);
+                if (visible != null)
+                {
+                    return visible;
+                }
+            }
+            catch (final Exception ignored)
+            {
+            }
+        }
+
+        if (!forceXpath && clean.matches("^[a-zA-Z0-9_-]+$"))
+        {
+            try
+            {
+                final ElementsCollection els = Selenide.$$(By.tagName(clean));
+                final SelenideElement visible = findFirstVisible(els, clean);
                 if (visible != null)
                 {
                     return visible;
@@ -372,23 +385,176 @@ public final class SelenideElementFinder
         return null;
     }
 
-    /**
-     * Helper method to filter an {@link ElementsCollection} and return the first element that is currently displayed in the live DOM.
-     *
-     * @param els the collection of elements
-     * @return the first displayed element, or null if no element is displayed or collection is empty
-     */
-    private static SelenideElement findFirstVisible(final ElementsCollection els)
+    private static SelenideElement tryResolveAutomationId(final String clean)
+    {
+        final java.util.regex.Matcher matcher = java.util.regex.Pattern.compile("(xc[a-zA-Z0-9_\\-]+)").matcher(clean);
+        if (!matcher.find())
+        {
+            return null;
+        }
+        final String neoId = matcher.group(1);
+        try
+        {
+            final String transformedCss = clean.replaceAll("#" + java.util.regex.Pattern.quote(neoId), "[data-ai='" + neoId + "']");
+            ElementsCollection els = Selenide.$$(By.cssSelector(transformedCss));
+            SelenideElement visible = findFirstVisible(els, clean);
+            if (visible != null)
+            {
+                return visible;
+            }
+
+            els = Selenide.$$(By.cssSelector("[data-ai='" + neoId + "']"));
+            visible = findFirstVisible(els, clean);
+            if (visible != null)
+            {
+                return visible;
+            }
+
+            final WebDriver driver = WebDriverRunner.getWebDriver();
+            if (shouldAttemptDomStamp(driver))
+            {
+                try
+                {
+                    new PageAnalyzer(driver).captureSimplifiedDom(ContextLevel.LEAN);
+                    els = Selenide.$$(By.cssSelector(transformedCss));
+                    visible = findFirstVisible(els, clean);
+                    if (visible != null)
+                    {
+                        return visible;
+                    }
+                    els = Selenide.$$(By.cssSelector("[data-ai='" + neoId + "']"));
+                    visible = findFirstVisible(els, clean);
+                    if (visible != null)
+                    {
+                        return visible;
+                    }
+                }
+                catch (final Exception ignored)
+                {
+                }
+            }
+        }
+        catch (final Exception ignored)
+        {
+        }
+        return null;
+    }
+
+    private static SelenideElement tryResolvePlaywrightPseudo(final String clean)
+    {
+        final String lower = clean.toLowerCase();
+        if (lower.startsWith("text=") || lower.startsWith("text*=") || lower.startsWith("has-text=") || lower.startsWith("has-text*="))
+        {
+            final int eqIdx = clean.indexOf('=');
+            String text = clean.substring(eqIdx + 1).trim();
+            if ((text.startsWith("\"") && text.endsWith("\"")) || (text.startsWith("'") && text.endsWith("'")))
+            {
+                if (text.length() >= 2)
+                {
+                    text = text.substring(1, text.length() - 1);
+                }
+            }
+            if (!text.isEmpty())
+            {
+                try
+                {
+                    final String escaped = LocatorResolver.escapeXpath(text);
+                    final String xpath = String.format(
+                        "//*[not(ancestor-or-self::*[@id='neo-ai-hud']) and (contains(normalize-space(text()), %s) or contains(normalize-space(.), %s) or contains(@value, %s) or contains(@aria-label, %s))]",
+                        escaped, escaped, escaped, escaped
+                    );
+                    final ElementsCollection els = Selenide.$$x(xpath);
+                    final SelenideElement visible = findFirstVisible(els, clean);
+                    if (visible != null)
+                    {
+                        return visible;
+                    }
+                }
+                catch (final Exception ignored)
+                {
+                }
+            }
+        }
+
+        final java.util.regex.Matcher pwMatcher = java.util.regex.Pattern.compile("^(.*?):(has-text|has-text\\*|text|text\\*|contains)\\(['\"]?(.*?)['\"]?\\)$", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(clean);
+        if (pwMatcher.find())
+        {
+            String tag = pwMatcher.group(1).trim();
+            if (tag.isEmpty())
+            {
+                tag = "*";
+            }
+            final String text = pwMatcher.group(3).trim();
+            if (!text.isEmpty())
+            {
+                try
+                {
+                    final String xpath = String.format("//%s[contains(normalize-space(.), %s)]", tag, LocatorResolver.escapeXpath(text));
+                    final ElementsCollection els = Selenide.$$x(xpath);
+                    final SelenideElement visible = findFirstVisible(els, clean);
+                    if (visible != null)
+                    {
+                        return visible;
+                    }
+                }
+                catch (final Exception ignored)
+                {
+                }
+            }
+        }
+
+        return null;
+    }
+
+    public static SelenideElement findFirstVisible(final ElementsCollection els, final String originalTarget)
     {
         if (els == null || els.isEmpty())
         {
             return null;
         }
+
+        final List<SelenideElement> visibleEls = new ArrayList<>();
         for (final SelenideElement el : els)
         {
             try
             {
                 if (el.isDisplayed())
+                {
+                    visibleEls.add(el);
+                }
+            }
+            catch (final Exception ignored)
+            {
+            }
+        }
+
+        if (visibleEls.isEmpty())
+        {
+            return null;
+        }
+
+        if (visibleEls.size() == 1)
+        {
+            return visibleEls.get(0);
+        }
+
+        final String cleanTarget = originalTarget != null ? originalTarget.trim().toLowerCase() : "";
+        for (final SelenideElement el : visibleEls)
+        {
+            try
+            {
+                final String text = el.getText();
+                if (text != null && text.trim().equalsIgnoreCase(cleanTarget))
+                {
+                    return el;
+                }
+                final String val = el.getValue();
+                if (val != null && val.trim().equalsIgnoreCase(cleanTarget))
+                {
+                    return el;
+                }
+                final String aria = el.getAttribute("aria-label");
+                if (aria != null && aria.trim().equalsIgnoreCase(cleanTarget))
                 {
                     return el;
                 }
@@ -397,92 +563,22 @@ public final class SelenideElementFinder
             {
             }
         }
-        return null;
-    }
 
-    /**
-     * Splits a comma-separated target string into individual candidate locators, respecting quotes and brackets.
-     */
-    private static List<String> splitCandidates(final String target)
-    {
-        final List<String> result = new java.util.ArrayList<>();
-        if (target == null)
+        for (final SelenideElement el : visibleEls)
         {
-            return result;
-        }
-
-        final StringBuilder current = new StringBuilder();
-        boolean inSingleQuote = false;
-        boolean inDoubleQuote = false;
-        int bracketDepth = 0;
-
-        for (int i = 0; i < target.length(); i++)
-        {
-            final char c = target.charAt(i);
-            if (c == '\'' && !inDoubleQuote)
+            try
             {
-                inSingleQuote = !inSingleQuote;
-            }
-            else if (c == '"' && !inSingleQuote)
-            {
-                inDoubleQuote = !inDoubleQuote;
-            }
-            else if (c == '[' && !inSingleQuote && !inDoubleQuote)
-            {
-                bracketDepth++;
-            }
-            else if (c == ']' && !inSingleQuote && !inDoubleQuote)
-            {
-                bracketDepth--;
-            }
-
-            if (c == ',' && !inSingleQuote && !inDoubleQuote && bracketDepth <= 0)
-            {
-                final String candidate = current.toString().trim();
-                if (!candidate.isEmpty())
+                if (el.is(Condition.focused))
                 {
-                    result.add(candidate);
+                    return el;
                 }
-                current.setLength(0);
             }
-            else
+            catch (final Exception ignored)
             {
-                current.append(c);
             }
         }
 
-        final String finalCandidate = current.toString().trim();
-        if (!finalCandidate.isEmpty())
-        {
-            result.add(finalCandidate);
-        }
-
-        if (result.isEmpty())
-        {
-            result.add(target.trim());
-        }
-
-        return result;
-    }
-
-    /**
-     * Safely escapes string values for insertion into XPath string literals.
-     * Handles single quotes, double quotes, and mixed strings using XPath {@code concat()}.
-     *
-     * @param value the raw text value to escape
-     * @return an XPath-safe string expression
-     */
-    private static String escapeXpath(final String value)
-    {
-        if (!value.contains("'"))
-        {
-            return "'" + value + "'";
-        }
-        if (!value.contains("\""))
-        {
-            return "\"" + value + "\"";
-        }
-        return "concat('" + value.replace("'", "', \"'\", '") + "')";
+        return visibleEls.get(0);
     }
 
     public static By resolveLocator(final String target)
